--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "npx tsx index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
